--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ input {
     box-shadow: 0px 0px 3px 0px;
 }
 button {
+    background: white;
     border-radius: 15px;
     box-shadow: 0px 0px 3px 0px;
 }
