--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ button {
 }
 #votebox button {
     padding: 10px 20px;
-}
+} 
 #continuebox {
     padding: 20px 20px;
     text-align: center;
@@ -65,6 +65,9 @@ button {
     /* color: green; */
     padding: 10px 20px;
 }
+/* .choicebtn {
+    background: #000;
+} */
 #resultsBtn {
     padding: 10px 20px;
 }
