--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
     background-color:rgb(7, 139, 128);
 }
 #app {
-    margin: 0 10vw;
-    padding: 20px 20px;
+    margin: 0;
+    /* padding: 20px 20px; */
     background: rgb(1, 93, 155);
 }
 #header {
@@ -14,12 +14,12 @@ body {
     padding: 20px 20px;
 }
 #header h1 {
-    font-size: 4em;
+    font-size: 3em;
 }
 #inputstuff {
     text-align: center;
     /* background: rgb(7, 139, 128); */
-    padding: 20px 20px;
+    /* padding: 20px 20px; */
 }
 input {
     padding: 10px 20px;
