--- a/style.css
+++ b/style.css
@@ -2,21 +2,25 @@
 body {
     font-family: monospace;
     color: white;
-    background-color:rgb(7, 139, 128);
+    background-color:rgb(0, 21, 31);
 }
 #app {
+    border-radius: 10px;
     margin: 0;
     /* padding: 20px 20px; */
-    background: rgb(1, 93, 155);
+    background: rgb(0, 99, 145);
 }
 #header {
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
     text-align: center;
-    background: rgb(139, 63, 0);
+    background: rgb(0, 66, 97);
     padding: 20px 20px;
 }
 #header h1 {
     font-size: 3em;
-    border: solid white;
+    border: solid rgb(0, 99, 145);
+    border-radius: 10px;
     padding: 15px 0px;
 }
 #header h2 {
@@ -30,12 +34,12 @@ body {
 input {
     padding: 10px 20px;
     width: 200px;
-    border-radius: 15px;
-    box-shadow: 0px 0px 3px 0px;
+    border-radius: 10px;
+    /* box-shadow: 0px 0px 3px 0px; */
 }
 button {
     background: white;
-    border-radius: 15px;
+    border-radius: 20px;
     box-shadow: 0px 0px 3px 0px;
 }
 #titlebox {
