--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
 #header h1 {
     font-size: 3em;
     border: solid rgb(0, 99, 145);
+    border-width: 4px;
     border-radius: 10px;
     padding: 15px 0px;
 }
@@ -28,8 +29,8 @@ body {
 }
 #inputstuff {
     text-align: center;
-    /* background: rgb(7, 139, 128); */
-    /* padding: 20px 20px; */
+    /* background: rgb(0, 131, 192); */
+    padding: 20px 10px;
 }
 input {
     padding: 10px 20px;
