--- a/style.css
+++ b/style.css
@@ -39,9 +39,11 @@ input {
     /* box-shadow: 0px 0px 3px 0px; */
 }
 button {
-    background: white;
+    background: rgb(255, 255, 255);
     border-radius: 20px;
     box-shadow: 0px 0px 3px 0px;
+    border-color: white;
+    margin: 0px 5px;
 }
 #titlebox {
     font-size: 3em;
@@ -84,4 +86,7 @@ button {
 }
 .winner {
     font-size: 3em;
+}
+.choicebtn {
+    padding: 50px;
 }
